--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@remnote/plugin-sdk": "^0.0.33",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
