--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/lodash": "^4.14.200",
     "moment": "^2.29.4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "timer": "^1.0.1"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
